syntax = "proto3";

package shortener;

option go_package = "github.com/SversusN/shortener/internal/grpcsrv";

message URLRequest {
  string original_url = 1;
}

message URLResponse {
  string short_url = 1;
}

message BatchURLRequest {
  message BatchURL {
    string correlation_id = 1;
    string original_url = 2;
  }
  repeated BatchURL urls = 1;
}

message BatchURLResponse {
  message BatchURL {
    string correlation_id = 1;
    string short_url = 2;
  }
  repeated BatchURL urls = 1;
}

message GetURLReq {
  string url_id = 1;
}

message GetURLRes {
  string original_url = 1;
}

message GetUsersURLsReq {}

message GetUsersURLsRes {
  message UserURL {
    string original_url = 1;
    string short_url = 2;
  }
  repeated UserURL urls = 1;
}

message DeleteUserURLsReq {
  repeated string urls = 1;
}

message DeleteUserURLsRes {}

message GetStatsReq {}

message GetStatsRes {
  int32 urls = 1;
  int32 users = 2;
}

message PingRequest {}

message PingResponse {}

service Shortener {
  rpc ShortenURL(URLRequest) returns (URLResponse);
  rpc ShortenBatchURL(BatchURLRequest) returns (BatchURLResponse);
  rpc Ping(PingRequest) returns (PingResponse);
  rpc GetURL(GetURLReq) returns (GetURLRes);
  rpc GetUserURLs(GetUsersURLsReq) returns (GetUsersURLsRes);
  rpc DeleteUserURLs(DeleteUserURLsReq) returns (DeleteUserURLsRes);
  rpc GetStats(GetStatsReq) returns (GetStatsRes);
}